fix spacing for mobile breakpoint

--- a/src/index.css
+++ b/src/index.css
@@ -105,7 +105,7 @@
     }
 
     .footer-container {
-        @apply grid sm:grid-cols-2 desktop:max-w-1184 xl:max-w-5xl md:px-6
+        @apply grid sm:grid-cols-2 desktop:max-w-1184 xl:max-w-5xl md:px-6 xl:px-0
     }
 
     .footer-column {
